# class12-cs-practical-file

./: pyproject.toml  q1.py  q10.py  q11.py  q12.py  q13.py  q14.py  q15.py  q16.py  q17.py  q18.py  q19.py  q2.py  q20.txt  q21.txt  q22.txt  q23.txt  q24.txt  q3.py  q4.py  q5.py  q6.py  q7.py  q8.py  q9.py  railway.py
